--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,7 +11,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="/css/inicio.css">
     <link rel="icon" href="/img/icon.ico">
-    <title>Amonooos</title>
+    <title>Title</title>
 </head>
 
 <body>
