--- a/src/views/html/events.html
+++ b/src/views/html/events.html
@@ -10,17 +10,8 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../../public/css/events.css" />
     <title>Eventos</title>
-    <style>
-        table td {
-            padding: 1rem;
-            background: #b5d2ff;
-        }
-
-        #tr-head td{
-            background: #538be0;
-        }
-    </style>
   </head>
   <body>
     <div class="menu" style="display: block; background: #393e46;">
@@ -51,45 +42,106 @@
         Salir</a
       >
     </div>
-    <div class="container-events w-100 m-0">
-      <table class="w-100">
-        <tr id="tr-head">
-          <td>No.</td>
-          <td>Nombre</td>
-          <td>Descripcion</td>
-          <td>Fecha</td>
-        </tr>
-        <tr>
-          <td>1</td>
-          <td>Evento 1</td>
-          <td>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse
-            blanditiis cumque tenetur aspernatur excepturi quidem ullam,
-            reprehenderit
-          </td>
-          <td>26/11/2019</td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>Evento 2</td>
-          <td>
-            Amet consectetur adipisicing elit. Esse
-            blanditiis cumque tenetur aspernatur excepturi quidem ullam,
-            reprehenderit
-          </td>
-          <td>10/12/2019</td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>Evento 3</td>
-          <td>
-            Sit amet consectetur adipisicing elit. Esse
-            blanditiis cumque tenetur aspernatur excepturi quidem ullam,
-            reprehenderit
-          </td>
-          <td>10/12/2019</td>
-        </tr>
-      </table>
+    <div class="parallax">
+      <div class="text-parallax">Eventos</div>
+    </div>
+    <div class="container-events w-100 m-0 p-4">
+      <div class="row justify-content-center">
+        <div class="col-3 column1 m-2">
+          <img class="img" src="../../public/img/img1.jpg" alt="..." />
+          <h4 class="text-img1">Evento 1</h4>
+          <p class="desc-img1">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
+            cupiditate temporibus nostrum reiciendis quas. Quis assumenda, esse
+            officia, voluptates laborum quas suscipit error est ab quos quam
+            consequatur nostrum harum!
+          </p>
+        </div>
+        <div class="col-3 column1 m-2">
+          <img class="img" src="../../public/img/img2.jpg" alt="..." />
+          <h4 class="text-img1">Evento 2</h4>
+          <p class="desc-img1">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
+            cupiditate temporibus nostrum reiciendis quas. Quis assumenda, esse
+            officia, voluptates laborum quas suscipit error est ab quos quam
+            consequatur nostrum harum!
+          </p>
+        </div>
+        <div class="col-3 column1 m-2">
+          <img class="img" src="../../public/img/img3.jpg" alt="..." />
+          <h4 class="text-img1">Evento 3</h4>
+          <p class="desc-img1">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
+            cupiditate temporibus nostrum reiciendis quas. Quis assumenda, esse
+            officia, voluptates laborum quas suscipit error est ab quos quam
+            consequatur nostrum harum!
+          </p>
+        </div>
+      </div>
+      <div class="row m-2 justify-content-center">
+        <div class="col-3 column1 m-2">
+          <img class="img" src="../../public/img/img4.jpg" alt="..." />
+          <h4 class="text-img1">Evento 4</h4>
+          <p class="desc-img1">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
+            cupiditate temporibus nostrum reiciendis quas. Quis assumenda, esse
+            officia, voluptates laborum quas suscipit error est ab quos quam
+            consequatur nostrum harum!
+          </p>
+        </div>
+        <div class="col-3 column1 m-2">
+          <img class="img" src="../../public/img/img5.jpg" alt="..." />
+          <h4 class="text-img1">Evento 5</h4>
+          <p class="desc-img1">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
+            cupiditate temporibus nostrum reiciendis quas. Quis assumenda, esse
+            officia, voluptates laborum quas suscipit error est ab quos quam
+            consequatur nostrum harum!
+          </p>
+        </div>
+        <div class="col-3 column1 m-2">
+          <img class="img" src="../../public/img/img6.jpg" alt="..." />
+          <h4 class="text-img1">Evento 6</h4>
+          <p class="desc-img1">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
+            cupiditate temporibus nostrum reiciendis quas. Quis assumenda, esse
+            officia, voluptates laborum quas suscipit error est ab quos quam
+            consequatur nostrum harum!
+          </p>
+        </div>
+      </div>
+      <div class="row m-2 justify-content-center">
+        <div class="col-3 column1 m-2">
+          <img class="img" src="../../public/img/img7.jpg" alt="..." />
+          <h4 class="text-img1">Evento 7</h4>
+          <p class="desc-img1">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
+            cupiditate temporibus nostrum reiciendis quas. Quis assumenda, esse
+            officia, voluptates laborum quas suscipit error est ab quos quam
+            consequatur nostrum harum!
+          </p>
+        </div>
+        <div class="col-3 column1 m-2">
+          <img class="img" src="../../public/img/img8.jpg" alt="..." />
+          <h4 class="text-img1">Evento 8</h4>
+          <p class="desc-img1">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
+            cupiditate temporibus nostrum reiciendis quas. Quis assumenda, esse
+            officia, voluptates laborum quas suscipit error est ab quos quam
+            consequatur nostrum harum!
+          </p>
+        </div>
+        <div class="col-3 column1 m-2">
+          <img class="img" src="../../public/img/img9.jpg" alt="..." />
+          <h4 class="text-img1">Evento 9</h4>
+          <p class="desc-img1">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
+            cupiditate temporibus nostrum reiciendis quas. Quis assumenda, esse
+            officia, voluptates laborum quas suscipit error est ab quos quam
+            consequatur nostrum harum!
+          </p>
+        </div>
+      </div>
     </div>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
